src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --test: #5577d6;
  --ifm-color-primary: #95adee;
  --ifm-color-primary-dark: #7493e9;
  --ifm-color-primary-darker: #6386e6;
  --ifm-color-primary-darkest: #3160de;
  --ifm-color-primary-light: #b6c7f3;
  --ifm-color-primary-lighter: #c7d4f6;
  --ifm-color-primary-lightest: #f9fafe;
  --ifm-code-font-size: 90%;
  --ifm-font-size-base: 92%;
  --ifm-z-index-fixed: 200;
  --ifm-font-family-base: NotoSansSC, NotoSans;
  --ifm-paragraph-margin-bottom: 0.5rem;
  --ifm-list-paragraph-margin: 0.2rem;
  letter-spacing: 0px;
}

/* hide home icon in breadcrumbs */
.breadcrumbs li:first-child {
  display: none !important;
}

h1 {
  font-family: NotoSans-ExtraLight !important;
}

h2 {
  padding-bottom: 10px;
  border-bottom: 1px solid #dbdbdb;
  font-family: NotoSans !important;
}

h3 {
  font-family: NotoSans-Medium !important;
}

h4 {
  font-family: NotoSans-SemiBold !important;
}

@font-face {
  font-family: NotoSansSC;
  src: local("NotoSansSC"), url(/static/font/NotoSansSC-Regular.otf) format("truetype");
  font-weight: normal;
  font-style: normal;
  unicode-range: U+2192;
}

@font-face {
  font-family: NotoSans;
  src: local("NotoSans"), url(/static/font/NotoSans-Regular.ttf) format("ttf"),
    url(/static/font/NotoSans-Regular.woff) format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: NotoSans-Medium;
  src: local("NotoSans-Medium"), url(/static/font/NotoSans-Medium.ttf) format("ttf"),
    url(/static/font/NotoSans-Medium.woff) format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: NotoSans-Thin;
  src: local("NotoSans-Thin"), url(/static/font/NotoSans-Thin.ttf) format("ttf"),
    url(/static/font/NotoSans-Thin.woff) format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: NotoSans-SemiBold;
  src: local("NotoSans-SemiBold"), url(/static/font/NotoSans-SemiBold.ttf) format("ttf"),
    url(/static/font/NotoSans-SemiBold.woff) format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: NotoSans-ExtraLight;
  src: local("NotoSans-ExtraLight"), url(/static/font/NotoSans-ExtraLight.ttf) format("ttf"),
    url(/static/font/NotoSans-ExtraLight.woff) format("woff");
  font-weight: normal;
  font-style: normal;
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme="dark"] {
  --ifm-color-primary: #95adee;
  --ifm-color-primary-dark: #7493e9;
  --ifm-color-primary-darker: #6386e6;
  --ifm-color-primary-darkest: #3160de;
  --ifm-color-primary-light: #b6c7f3;
  --ifm-color-primary-lighter: #c7d4f6;
  --ifm-color-primary-lightest: #f9fafe;
  --ifm-background-color: #1f2765;

  --ifm-color-success-dark: rgb(0, 139, 0);
  --ifm-color-success-darker: rgb(0, 139, 0);
  --ifm-color-success-darkest: rgb(0, 115, 0);
  --ifm-color-success-light: rgb(38, 178, 38);
  --ifm-color-success-lighter: rgba(77, 191, 77, 0.212);
  --ifm-color-success-lightest: rgb(128, 210, 128);
}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

[data-theme="dark"] .docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.3);
}

body {
  overflow-x: hidden;
}

table,
[data-theme="dark"] table {
  width: 100%;
  height: 100%;
  max-width: 100%;
  position: relative;
  overflow: initial;
  table-layout: fixed;
  text-indent: 0;
  border-collapse: separate;
  border-spacing: 0px;
}

thead tr {
  overflow-x: hidden;
}

thead {
  top: 55px;
  z-index: 20;
  display: block;
  position: sticky;
}

tbody {
  width: 100%;
  display: block;
  overflow: auto;
  scroll-snap-type: x mandatory;
}

table thead tr {
  width: 100%;
  display: block;
  overflow-y: hidden;
  overflow-x: hidden;
  -webkit-overflow-scrolling: touch;
}

thead tr th,
tbody tr td {
  min-width: 10rem;
  width: 20%;
  max-width: 100%;
}

thead tr th:first-child,
tbody tr td:first-child {
  min-width: 12rem;
  width: 10%;
  max-width: 100%;
}

thead tr th:nth-child(2),
tbody tr td:nth-child(2) {
  min-width: 14rem;
  width: 30%;
  max-width: 100%;
}

thead tr th:nth-child(3),
tbody tr td:nth-child(3) {
  min-width: 14rem;
  width: 30%;
  max-width: 100%;
}

thead tr::-webkit-scrollbar {
  display: none;
}

table tr:nth-child(2n) {
  background-color: white;
}

[data-theme="dark"] table tr:nth-child(2n) {
  background-color: var(--ifm-table-background);
}

table thead th {
  text-align: left;
  padding-top: 6px;
  padding-bottom: 12px;
  border: none;
  background-color: white;
  border-bottom: 2px solid var(--ifm-tabs-color-active);
}

[data-theme="dark"] table th {
  background-color: #17191a;
}

table tbody tr td {
  border: none;
  border-spacing: 0;
  border-top: 1px solid #e5e7eb;
}

[data-theme="dark"] td {
  border-top: 1px solid #393939;
}

thead tr:first-child {
  border-bottom: none;
}

table tr:first-child td,
table tr:first-child {
  border-top: none;
}

.scrollHint {
  color: #fff;
  font-size: 11px;
  font-weight: bold;
  text-align: center;
  align-items: center;
  justify-content: center;
  flex-flow: column;
  width: 48px;
  height: 48px;
  max-height: 100%;
  background: rgba(211, 211, 211, 0.85);
  border-radius: 1000px;
  position: absolute;
  top: 50%;
  right: 0;
  transform: translate(-50%, -50%);
  pointer-events: none;
  z-index: 50;
  animation: slide-left 2s ease-in infinite both;
}

[data-theme="dark"] .scrollHint {
  background-color: rgba(199, 199, 199, 0.95);
}

.scrollHint.visible {
  display: flex;
}

.scrollHint.invisible {
  display: none;
}

.scrollHint::before {
  display: block;
  width: 50%;
  height: 50%;
  background: url(../../static/img/swipe-left.png) 50% / contain no-repeat;
  content: "";
}

[data-theme="dark"] .scrollHint::before {
}

@-webkit-keyframes slide-left {
  0%,
  30% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
    opacity: 1;
  }
  90%,
  100% {
    -webkit-transform: translateX(-25px);
    transform: translateX(-25px);
    opacity: 0;
  }
}

@keyframes slide-left {
  0%,
  30% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
    opacity: 1;
  }
  90%,
  100% {
    -webkit-transform: translateX(-25px);
    transform: translateX(-25px);
    opacity: 0;
  }
}

@-webkit-keyframes bounce-right {
  0% {
    -webkit-transform: translateX(48px);
    transform: translateX(48px);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
    opacity: 1;
  }
  24% {
    opacity: 1;
  }
  40% {
    -webkit-transform: translateX(26px);
    transform: translateX(26px);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
  }
  65% {
    -webkit-transform: translateX(13px);
    transform: translateX(13px);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
  }
  82% {
    -webkit-transform: translateX(6.5px);
    transform: translateX(6.5px);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
  }
  93% {
    -webkit-transform: translateX(4px);
    transform: translateX(4px);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
  }
  25%,
  55%,
  75%,
  87%,
  98% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
  }
  100% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
    opacity: 1;
  }
}

@keyframes bounce-right {
  0% {
    -webkit-transform: translateX(48px);
    transform: translateX(48px);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
    opacity: 1;
  }
  24% {
    opacity: 1;
  }
  40% {
    -webkit-transform: translateX(26px);
    transform: translateX(26px);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
  }
  65% {
    -webkit-transform: translateX(13px);
    transform: translateX(13px);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
  }
  82% {
    -webkit-transform: translateX(6.5px);
    transform: translateX(6.5px);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
  }
  93% {
    -webkit-transform: translateX(4px);
    transform: translateX(4px);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
  }
  25%,
  55%,
  75%,
  87%,
  98% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
  }
  100% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
    opacity: 1;
  }
}

@keyframes shake {
  0%,
  100% {
    transform: translateX(0);
  }
  10%,
  30%,
  50%,
  70%,
  90% {
    transform: translateX(-4px);
  }
  20%,
  40%,
  60%,
  80% {
    transform: translateX(4px);
  }
}

